--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<java.version>11</java.version>
 		<lombok.version>1.18.10</lombok.version>
 		<modelmapper.version>2.4.4</modelmapper.version>
+		<apachecommon.version>4.1</apachecommon.version>
 	</properties>
 
 	<dependencies>
@@ -38,6 +39,12 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>${apachecommon.version}</version>
 		</dependency>
 	</dependencies>
 
