--- a/demo-app/src/main/resources/application.properties
+++ b/demo-app/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-logging.level.root=DEBUG
+logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
